# RustStudy

./: Cargo.toml  README.md
appendix/: Cargo.toml
appendix/src/: main.rs
chapter01-helloworld/: Cargo.toml
chapter01-helloworld/src/: main.rs
chapter02-guessing-game/: Cargo.toml
chapter02-guessing-game/src/: main.rs
chapter03-common-concepts/: Cargo.toml
chapter03-common-concepts/src/: main.rs
chapter04-ownership/: Cargo.toml
chapter04-ownership/src/: main.rs
chapter05-structs/: Cargo.toml
chapter05-structs/src/: main.rs
chapter06-enum-and-match/: Cargo.toml
chapter06-enum-and-match/src/: main.rs
chapter06-enums-and-match/: Cargo.toml
chapter07-crate-and-modules/: Cargo.toml
chapter07-crate-and-modules/src/: main.rs
chapter07-crates-and-modules/: Cargo.toml
chapter07-crates-and-modules/src/new_mod/: submodule.rs
chapter08-collections/: Cargo.toml
chapter08-collections/src/: main.rs
chapter09-error/: Cargo.toml
chapter09-error/src/: main.rs
chapter10-generic-traits-lifetimes/: Cargo.toml
chapter10-generic-traits-lifetimes/src/: main.rs
chapter11-tests/: Cargo.toml
chapter11-tests/src/: main.rs
chapter11-tests/tests/: integration_tests.rs
chapter11-tests/tests/common/: mod.rs
chapter12-io-project/: Cargo.toml
chapter12-io-project/src/: lib.rs  main.rs
chapter13-functional-features/: Cargo.toml
chapter13-functional-features/src/: main.rs
chapter14-cargo/: Cargo.toml
chapter14-cargo/src/: main.rs
chapter15-smart-pointer/: Cargo.toml
chapter15-smart-pointer/src/: main.rs
chapter16-concurrency/: Cargo.toml
chapter16-concurrency/src/: main.rs
chapter17-async-await/: Cargo.toml
chapter17-async-await/src/: main.rs
chapter18-object-oriented/: Cargo.toml
chapter18-object-oriented/src/: main.rs
chapter19-patterns-and-matching/: Cargo.toml
chapter19-patterns-and-matching/src/: main.rs
chapter20-advanced-features/: Cargo.toml
chapter20-advanced-features/hello-macro-attribute/: Cargo.toml
chapter20-advanced-features/hello-macro-derive/: Cargo.toml
chapter20-advanced-features/hello-macro-function/: Cargo.toml
chapter20-advanced-features/src/: main.rs
chapter21-web-server-project/: Cargo.toml
chapter21-web-server-project/src/: lib.rs  main.rs
rocket-web-application/: Cargo.toml  database.sql
rocket-web-application/src/: error.rs  main.rs
rocket-web-application/src/handlers/: user_handler.rs
rocket-web-application/src/models/: user.rs
rocket-web-application/src/services/: user_service.rs
(+3 files in other folders)
