[workspace]
members = [
    "chapter01-helloworld"
    , "chapter02-guessing-game"
    , "chapter03-common-concepts"
    , "chapter04-ownership"
    , "chapter05-structs"
    , "chapter06-enum-and-match"
    , "chapter07-crate-and-modules"
    , "chapter08-collections"
    , "chapter09-error"
    , "chapter10-generic-traits-lifetimes"
    , "chapter11-tests"
    , "chapter12-io-project"
    , "chapter13-functional-features"
    , "chapter14-cargo"
    , "chapter15-smart-pointer"
    , "chapter16-concurrency"]
resolver = "3"

[workspace.package]
publish = false

[workspace.dependencies]
