[workspace]
members = [
    "chapter01-helloworld"
    , "chapter02-guessing-game"
    , "chapter03-common-concepts"
    , "chapter04-ownership"
    , "chapter05-structs"
    , "chapter06-enums-and-match"
    , "chapter07-crates-and-modules"
    , "chapter08-collections"
    , "chapter09-error"
    , "chapter10-generic-traits-lifetimes"
    , "chapter11-tests"
    , "chapter12-io-project"
    , "chapter13-functional-features"
    , "chapter14-cargo"
    , "chapter15-smart-pointer"
    , "chapter16-concurrency"
    , "chapter17-async-await"
    , "chapter18-object-oriented"
    , "chapter19-patterns-and-matching"
    , "chapter20-advanced-features"
    , "chapter20-advanced-features/hello-macro-derive"
    , "chapter20-advanced-features/hello-macro-attribute"
    , "chapter20-advanced-features/hello-macro-function"]
resolver = "3"

[workspace.package]
publish = false

[workspace.dependencies]
