[package]
name = "rocket-web-application"
version = "0.1.0"
edition = "2024"
publish.workspace = true

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "1.1.19", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros"
] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.18.0"
